--- a/front-end-geoprofs/package.json
+++ b/front-end-geoprofs/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "cypress": "^13.15.1",
     "daisyui": "^4.12.13",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
