Added end to end test  + gitignore
Added end to end test through cypress, and gitignore for it.

--- a/front-end-geoprofs/.gitignore
+++ b/front-end-geoprofs/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# cypress 
+# Cypress artifacts
+cypress/videos/
+cypress/screenshots/
+cypress.env.json
+cypress/reports/
+
